# FerrumChat

./: Cargo.toml  Contributing.md  Security.md
.sqlx/: query-0e2525910b7ed0df181e0159bcf042ea0360b97aa21adbb50327c859af3b2c26.json  query-241f32fab5cf99dae4bc48b911289fe239b6c5f0ba447c8e8550345ea4b7edac.json  query-3f21194a4f4e3098ec69df9d7242d242d2cd66db32b4e01148a7ac18b4e3c501.json  query-67c636255a1240bcf1e123dbcdd5ca3c31b76cf59d4648b4fc3c483f2290668d.json  query-816c415b5817358f4af8ddbe6b6628dc5bf0e352e6dcda2830abef2750c465e8.json  query-83ef30ef65a6931eaba790838c0c5fbc085b09881301543236521373002005c3.json  query-8e380a59e937dddbf3e21bcf04506b19c7ce40653c57611089ef03c96c94a994.json  query-af34c60b29dc4c09fd8bf23188e528182fad7da9eded24b2f29decb39b8415ba.json  query-c0eee323880b0e2bab6938679b08ffdc0a97ca418ea5a114718f9ccc01d723c8.json  query-ec84f15745210047acf78b622f491b0aed9a2c8ea2b40b564ae3777e7432fdbb.json  query-ed5cfed9fb694a423a6877093300e52f835a9c542ff93324c84401ca23fa30bd.json  query-f4cc9a9c89ced476165244c1a6bf44f98ac6b212ef878b574b530af620ed3e90.json
migrations/: 20260214194057_initial_schema.sql
src/: db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  router.rs  websocket.rs
src/handlers/: auth.rs  chat.rs  chats.rs  mod.rs  user.rs  users_chat.rs
